--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script async defer>
       $(document).ready(function(){
         let repos = [
-                'python-midi',
+                'midi',
                 'rtmidi2',
         ];
         repos.reverse();
