--- a/midi/index.html
+++ b/midi/index.html
@@ -2,11 +2,11 @@
 <html>
  <head>
   <title>
-   python-midi
+   midi
   </title>
  </head>
  <body>
-  <a href="git+https://github.com/sampler-box/python-midi.git@0.3.0#egg=midi-0.3.0">
+  <a href="git+https://github.com/sampler-box/midi.git@0.3.0#egg=midi-0.3.0">
    midi-0.3.0
   </a>
  </body>
