--- a/rtmidi2/index.html
+++ b/rtmidi2/index.html
@@ -6,6 +6,9 @@
   </title>
  </head>
  <body>
+  <a href="git+https://github.com/sampler-box/rtmidi2.git@1.1.2#egg=rtmidi2-1.1.2">
+   rtmidi2-1.1.2
+  </a>
   <a href="git+https://github.com/sampler-box/rtmidi2.git@1.1.1#egg=rtmidi2-1.1.1">
    rtmidi2-1.1.1
   </a>
